# mlops-project100

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  API_Docker_Setup.py  README.md  RequestsExercises.py  bentoml_service.py  cloudbuild.yaml  database.csv  load_from_env_file.py  main.py  pokemon_class_to_index.json  pyproject.toml  report.html  report.md  requirements.txt  requirements_backend.txt  requirements_dev.txt  wandb.env
.github/workflows/: cloudbuild.yaml  cml_data.yaml  stage_workflow.yaml  tests.yaml
MLOps-project100/: tasks.py
MLOps-project100/dockerfiles/: api.dockerfile
app/: app.py  backend.dockerfile  backend.py  data.py  dockercommands.txt  frontend.dockerfile  train_wandb.py
configs/: config.yaml  config_gpu.yaml  vertex_ai_train.yaml
data/raw/: pokemon.csv  pokemon_list.csv  pokemon_list.json  pokemon_list.txt  pokemon_list2.txt
dockerfiles/: backend.dockerfile  evaluate.dockerfile  frontend.dockerfile  test.dockerfile  train.dockerfile
docs/: mkdocs.yaml
google-cloud-sdk/.install/: bq-nix.snapshot.json  bq.snapshot.json  (+8 more)
notebooks/: Pokedex.ipynb  eval_huggingface.ipynb  load_data.ipynb  test.ipynb
reports/: README.md  report.py
tests/: __init__.py  locustfile.py  old-data-test.py  test_api.py  test_data.py  test_model.py  test_train.py
trash/: ONNX_Benchmark.py  ONNX_Importer.py  ONNX_Optimizer.py  bentoml_client.py  bentoml_service.py  database.csv  inference_onnx.dockerfile  load_from_env_file.py  main.py
utils/: dockercommands.txt  generate_splits.py  pokemon-labels.json  pokemon_class_to_index.json  pokemon_list.py
(+38 files in other folders)
