[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "p100"
version = "0.0.1"
description = "An interesting MLOps project on an exciting data set"
authors = [
  { name = "Group100", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
select = ["I", "E", "F", "W", "C"]  #E = errors, F = formatting, W = warnings, C = complexity, D = docstrings
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
